# college-data-cleaning-env

./: Dockerfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  server.py  tasks.py
server/: app.py
