[project]
name = "college-data-cleaning-env"
version = "0.1.0"
description = "AI environment for cleaning college data"
authors = [
    { name = "Jahnavi" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"